--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,16 @@ FACILITY_ID='which of the city you want to check for earliest date'
 
 NODE_ENV='prod'
 
-NEXT_SCHEDULE_POLL= 10000 # delay before performing the next check for appointment in milliseconds
-MAX_NUMBER_OF_POLL= 1000 # maximum number of poll before stopping the process
+NEXT_SCHEDULE_POLL=30000 # delay before performing the next check for appointment in milliseconds
+MAX_NUMBER_OF_POLL=1000 # maximum number of poll before stopping the process
+COOLDOWN_TIMEOUT=18_000_000 #5 hours of cooldown
+
 NOTIFY_ON_DATE_BEFORE= 'date in format YYYY-MM-DD to check against in case we found a date earlier to notify you'
 
 NOTIFY_EMAILS='comma separated list of emails to notify when there's a spot'
 MAILGUN_DOMAIN='mailgun domain'
 MAILGUN_API_KEY='mailgun api key'
+
+
+PUSHOVER_USER='####' #Pushover email
+PUSHOVER_TOKEN='####' #Pushover app API key
