fix: dot env example

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ NEXT_SCHEDULE_POLL=30000 # delay before performing the next check for appointmen
 MAX_NUMBER_OF_POLL=1000 # maximum number of poll before stopping the process
 COOLDOWN_TIMEOUT=18_000_000 #5 hours of cooldown
 
-NOTIFY_ON_DATE_BEFORE= 'date in format YYYY-MM-DD to check against in case we found a date earlier to notify you'
+NOTIFY_ON_DATE_BEFORE_ENV=2029-12-25 'date in format YYYY-MM-DD to check against in case we found a date earlier to notify you'
 
 NOTIFY_EMAILS='comma separated list of emails to notify when there's a spot'
 MAILGUN_DOMAIN='mailgun domain'
