--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ SCHEDULE_ID='you can find this when you visit your usvisa-info account and you t
 FACILITY_ID='which of the city you want to check for earliest date'
 
 NODE_ENV='prod'
+RESCHEDULE_MODE=true
+
 
 NEXT_SCHEDULE_POLL=30000 # delay before performing the next check for appointment in milliseconds
 MAX_NUMBER_OF_POLL=1000 # maximum number of poll before stopping the process
