tg notifications fix month number handling

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/theoomoregbee/US-visa-appointment-notifier#readme",
   "dependencies": {
     "date-fns": "^2.29.2",
+    "node-telegram-bot-api": "^0.50.0",
     "dotenv": "^16.0.1",
     "mailgun.js": "^8.0.0",
     "puppeteer": "^16.2.0",
